--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Food Button</string>
     <string name="set_default_location">Set default location</string>
     <string name="settings">Settings</string>
-    <string name="chosen_restaurant">Chosen Restaurant</string>
+    <string name="restaurant_view">Restaurant View</string>
     <string name="powered_by_yelp">Powered by Yelp</string>
 
     <string name="finding_you_food">Finding you food&#8230;</string>
