--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,17 +19,6 @@
 
     <string name="view_on_yelp">View on Yelp</string>
 
-    <string name="set_default_location_title">Set Default Location</string>
-    <string name="default_location_explanation">
-        This location will be used to help you find nearby restaurants
-        when we are unable to get your current location.
-    </string>
-    <string name="need_default_location">
-        Because we are unable to get your current location right now,
-        please enter in a location we can use to find nearby restaurants for you.
-    </string>
-    <string name="default_location">Default location</string>
-    <string name="set">Set</string>
     <string name="default_location_set">Your default location has been set.</string>
 
     <string name="please_rate">
@@ -40,4 +29,20 @@
     </string>
     <string name="will_rate">Sure, I\'ll help</string>
     <string name="no_im_good">No, I\'m good</string>
+    
+    <string name="choose_default_location">Choose Default Location</string>
+    <string name="default_instructions">Your default location is where the Food Button searches when you press it.</string>
+    <string name="automatic">Automatic</string>
+    <string name="choose">Choose</string>
+    <string name="add_location">Add location</string>
+    <string name="add_location_title">Add Location</string>
+    <string name="location_added">Location added.</string>
+    <string name="location">Location</string>
+    <string name="add">Add</string>
+
+    <string name="auto_location_fail">
+        We are unable to get your current location right now.
+        Please use the map button in the toolbar to explicitly set a location,
+        and press the Food Button again.
+    </string>
 </resources>
