--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
     </string>
 
     <string name="location_services_needed">
-        Your default location is currently set to \"Automatic"\,
+        Your default location is currently set to \"Automatic\",
         which means that you need to enable location services to allow Food Button to get your current location.
         Would you like to do that now?
     </string>
