--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,8 +37,9 @@
     </string>
 
     <string name="location_services_needed">
-        Your current location is currently set to \"Automatic\",
-        which means that you need to enable location services to allow Food Button to get it.
+        Your current location is \"Automatic\",
+        which means that you need to enable location services
+        and then wait a couple seconds before hitting the Food Button.
         Would you like to do that now?
     </string>
 </resources>
