--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,8 @@
     </string>
 
     <string name="please_rate">
-        Hey, it looks like you\'re a frequent user of Food Button!
-        If you have a couple seconds, I would be incredibly grateful if you could rate this app in the Play Store.
-        Don\'t worry, I won\'t bother you with this ever again no matter what you choose.
-        Thank you again for even downloading this app to begin with.
+        Like Food Button? Then please take a few seconds to rate it in the Play Store.
+        Every rating goes a long way towards motivating me to continue improving it. Thank you!
     </string>
     <string name="will_rate">Sure, I\'ll help</string>
     <string name="no_im_good">No, I\'m good</string>
