--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Food Button</string>
     <string name="set_current_location">Set current location</string>
-    <string name="restaurant_view">Restaurant View</string>
+    <string name="restaurant">Restaurant</string>
     <string name="powered_by_yelp">Powered by Yelp</string>
 
     <string name="getting_your_location">Getting your location&#8230;</string>
